src/i830_batchbuffer.h
@@ -135,6 +135,8 @@ intel_batch_mark_pixmap_domains(intel_screen_private *intel,
 		list_add(&priv->batch, &intel->batch_pixmaps);
 	if (list_is_empty(&priv->flush))
 		list_add(&priv->flush, &intel->flush_pixmaps);
+
+	priv->busy = 1;
 }
 
 static inline void
